@add:;EJB Favorit
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@21 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -36,6 +36,7 @@
     <module>node</module>
     <module>contact</module>
     <module>calendar</module>
+    <module>favorit</module>
     <module>notation</module>
     <module>versioning</module>
     <module>formtemplate</module>
