@add:;QuestionContainer ejb
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@28 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -45,6 +45,7 @@
     <module>comment</module>
     <module>pdc</module>
     <module>mylinks</module>
+    <module>questioncontainer</module>
   </modules>
   
 </project>
