--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
+      <groupId>informa</groupId>
+      <artifactId>informa</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
     </dependency>
