All the tests are green :D
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@56 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/src/test/resources/com/silverpeas/jcrutil/Configuration.properties
+++ b/lib-core/src/test/resources/com/silverpeas/jcrutil/Configuration.properties
@@ -2,7 +2,7 @@ jcr.configuration.workspace=jackrabbit
 jcr.configuration.persistence.manager=org.apache.jackrabbit.core.persistence.mem.InMemPersistenceManager
 jcr.configuration.filesystem.manager=org.apache.jackrabbit.core.fs.mem.MemoryFileSystem
 
-jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/postgres
-jdbc.username=postgres
-jdbc.password=postgres
+jdbc.driver=${jdbc_driver}
+jdbc.url=${jdbc_url}
+jdbc.username=${jdbc_login}
+jdbc.password=${jdbc_password}
