--- a/lib-core/src/test/resources/com/stratelia/silverpeas/authentication/autDomainSP.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/authentication/autDomainSP.properties
@@ -11,10 +11,10 @@ autServersCount=1
 
 autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationSQL
 autServer0.enabled=true
-autServer0.SQLJDBCUrl=jdbc:postgresql://localhost:5432/postgres
-autServer0.SQLAccessLogin=postgres
-autServer0.SQLAccessPasswd=postgres
-autServer0.SQLDriverClass=org.postgresql.Driver
+autServer0.SQLJDBCUrl=${jdbc_url}
+autServer0.SQLAccessLogin=${jdbc_login}
+autServer0.SQLAccessPasswd=${jdbc_password}
+autServer0.SQLDriverClass=${jdbc_driver}
 autServer0.SQLUserTableName                   = DomainSP_User
 autServer0.SQLUserLoginColumnName             = login
 autServer0.SQLUserPasswordColumnName          = password
