--- a/lib-core/src/test/resources/com/stratelia/silverpeas/authentication/domains.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/authentication/domains.properties
@@ -1,10 +1,10 @@
 # Definition of database and tables where to find domains
 # -------------------------------------------------------
 
-SQLDomainJDBCUrl=jdbc:postgresql://localhost:5432/postgres
-SQLDomainAccessLogin=postgres
-SQLDomainAccessPasswd=postgres
-SQLDomainDriverClass=org.postgresql.Driver
+SQLDomainJDBCUrl=${jdbc_url}
+SQLDomainAccessLogin=${jdbc_login}
+SQLDomainAccessPasswd=${jdbc_password}
+SQLDomainDriverClass=${jdbc_driver}
 SQLDomainTableName				= ST_Domain
 SQLDomainIdColumnName				= id
 SQLDomainNameColumnName				= name
