--- a/lib-core/src/test/resources/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/lib-core/src/test/resources/com/stratelia/webactiv/beans/admin/admin.properties
@@ -10,20 +10,21 @@ DAPIDriverClassName = com.stratelia.webactiv.beans.admin.DBDAPInterface
 DAPIGeneralAdminId = 0
 
 # Driver used for admin management database
-AdminDBDriver=org.postgresql.Driver
+AdminDBDriver=${jdbc_driver}
 
 # Production database
-WaProductionDb=jdbc:postgresql://localhost:5432/postgres
-WaProductionUser=postgres
-WaProductionPswd=postgres
+WaProductionDb=${jdbc_url}
+WaProductionUser=${jdbc_login}
+WaProductionPswd=${jdbc_password}
+
 
 # Admin database
 #with ldap:
 #WaAdminDb = jdbc:inetdae7:stratdev4?database=IntranetStrateliaAdmin&sql7=true
 #with db:
-WaAdminDb = @AdminDatabaseURL@
-WaAdminUser  = @AdminDatabaseLogin@
-WaAdminPswd  = @AdminDatabasePasswd@
+WaAdminDb=${jdbc_url}
+WaAdminUser=${jdbc_login}
+WaAdminPswd=${jdbc_password}
 
 # Login password administrator
 AdministratorLogin = admin
