--- a/lib-core/src/test/resources/jdbc.properties
+++ b/lib-core/src/test/resources/jdbc.properties
@@ -1,5 +1,10 @@
-driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/postgres
-username=postgres
-password=postgres
+driverClassName=${jdbc_driver}
+url=${jdbc_url}
+username=${jdbc_login}
+password=${jdbc_password}
 jndi.name=jdbc/Silverpeas
+
+jdbc.driver=${jdbc_driver}
+jdbc.url=${jdbc_url}
+jdbc.username=${jdbc_login}
+jdbc.password=${jdbc_password}
