--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -21,6 +21,14 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jndi</groupId>
+      <artifactId>fscontext</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jndi</groupId>
+      <artifactId>providerutil</artifactId>
+    </dependency>
+    <dependency>
       <groupId>informa</groupId>
       <artifactId>informa</artifactId>
     </dependency>
@@ -185,12 +193,21 @@
   </dependencies>
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+     <filters>
+      <filter>src/test/filters/filters.properties</filter>
+    </filters>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <skipTests>true</skipTests>
+          <skipTests>false</skipTests>
         </configuration>
       </plugin>
       <plugin>
