--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -42,6 +42,7 @@
     <module>formtemplate</module>
     <module>publication</module>
     <module>statistic</module>
+    <module>readingcontrol</module>
     <module>comment</module>
     <module>pdc</module>
     <module>mylinks</module>
