@fix:;locked files problem fixed
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@71 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning.properties
@@ -59,3 +59,7 @@ versioning.SelectWriters = Sélectionnez les rédacteurs de votre fichier
 versioning.SaveList = Sauver la liste des utilisateurs et des groupes comme modèle
 versioning.SaveListWriters = Sauver la liste des utilisateurs comme modèle
 versioning.ListSaved = Modèle de liste sauvé... 
+
+versioning.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
+versioning.warning.checkin.locked.title=Fichier verrouillé
+versioning.warning.checkin.locked.force=Forcer la libération
