--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
@@ -51,3 +51,6 @@ cronScheduledReservedFile = 00 16 * * *
 
 # % de temps avant relance intermédiaire (entre 0 et 100)
 DelayReservedFile = 60
+
+
+ms.office.installation.path=C:\\\\Program Files\\\\Microsoft Office\\\\OFFICE10
