git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@72 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -414,7 +414,7 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>RestOnlineFileServer</servlet-name>
-    <url-pattern>/attached/file/*</url-pattern>
+    <url-pattern>/attached_file/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>GoToPublication</servlet-name>
