--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -190,6 +190,10 @@
       <version>0.4.1</version>
       <classifier>j2ee1.4-jdk6</classifier>
     </dependency>
+    <dependency>
+      <groupId>net.fortuna.ical4j</groupId>
+      <artifactId>ical4j</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
