--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app >
+<web-app version="2.4">
   <display-name >Silverpeas</display-name>
   <description>Collaborative portal organizer</description>
   
