@add:;Testing utility project
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@104 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
     </plugins>
   </build>
 
-  <modules>
+  <modules>    
     <module>lib-core</module>
+    <module>test-core</module>
     <module>ejb-core</module>
     <module>web-core</module>
     <module>war-core</module>
