--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -77,4 +77,16 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <filters>
+      <filter>src/main/filters/filters.properties</filter>
+    </filters>
+  </build>
 </project>
