--- a/test-core/src/main/resources/jndi.properties
+++ b/test-core/src/main/resources/jndi.properties
@@ -1,2 +1,2 @@
 java.naming.factory.initial=com.sun.jndi.fscontext.RefFSContextFactory
-java.naming.provider.url=file:///c:/tmp/jndi
+java.naming.provider.url=file:///temp/jndi
