--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -143,5 +143,20 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <reporting>
+    <plugins>
+      <plugin>
+  <groupId>net.sourceforge.maven-taglib</groupId>
+  <artifactId>maven-taglib-plugin</artifactId>
+  <version>2.3.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
