--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
@@ -5,7 +5,7 @@
 PrimaryFactor = 3
 SecondaryFactor = 1
 
-# maxFieldLength is a lucene propertie.
+# maxFieldLength is a lucene property.
 # Gives the maximum number of terms that will be indexed for a single field
 # in a document. This limits the amount of memory required for indexing,
 # so that collections with very large files
@@ -13,7 +13,7 @@ SecondaryFactor = 1
 # By default, no more than 10,000 terms will be indexed for a field.
 lucene.maxFieldLength = 10000
 
-# mergeFactor is a lucene propertie.
+# mergeFactor is a lucene property.
 # Determines how often segment indexes are merged by addDocument().
 # With smaller values, less RAM is used while indexing,
 # and searches on unoptimized indexes are faster,
@@ -25,7 +25,7 @@ lucene.maxFieldLength = 10000
 # This must never be less than 2. The default value is 10.
 lucene.mergeFactor = 5
 
-# maxMergeDocs is a lucene propertie.
+# maxMergeDocs is a lucene property.
 # Determines the largest number of documents ever merged by addDocument().
 # Small values (e.g., less than 10,000) are best for interactive indexing,
 # as this limits the length of pauses while indexing to a few seconds.
