--- a/config-core/src/main/config/properties/com/silverpeas/portlets/PCCTXLogMessages.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/PCCTXLogMessages.properties
@@ -1,6 +1,6 @@
 #
 #  CDDL HEADER START
-#  The contents of this file are subject to the terms
+#  The contents of this file is subject to the terms
 #  of the Common Development and Distribution License
 #  (the License). You may not use this file except in
 #  compliance with the License.
