--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
@@ -40,7 +40,7 @@ DelayBeforeProcess = 1
 
 ScheduledPurgeActify = 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59 * * * *
 
-# In minutes delay for a directory to be considered as proceeded by Actify and to be deleted
+# In minutes, delay for a directory to be considered as proceeded by Actify and to be deleted
 DelayBeforePurge = 4
 
 # Gestion des envois de mail pour les fichiers réservés
