--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/peasUtil/multiLang/fileServerBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/peasUtil/multiLang/fileServerBundle.properties
@@ -5,6 +5,6 @@ warning =									\
 <h1>Warning ..... </h1>								\
 The generation of the html document for the preview encountered some problems.	\
 <br>										\
-<center>Maybe, the html document is empty!!</center>				\
+<center>Maybe the html document is empty!!</center>				\
 </body>										\
 </html>	
