Adding some documentation
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@195 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+
+  <scm>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/</developerConnection>
+    <url>https://repository.silverpeas.org/svn/silverpeas/core/trunk</url>
+  </scm>
+
+  <distributionManagement>
+    <site>
+      <id>silverpeas.org</id>
+      <url>scp://repository.silverpeas.org/var/www/docs</url>
+    </site>
+  </distributionManagement>
+
   
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
