Adding Silverpeas Nexus as a repository
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@235 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
     </site>
   </distributionManagement>
 
+
+<repositories>
+    <repository>
+      <id>EclipseSilverpeas</id>
+      <layout>default</layout>
+      <name>Silverpeas Repository</name>
+      <url>http://repository.silverpeas.org/nexus/content/groups/silverpeas</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
   
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
