Source code is now in UTF-8
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@239 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
 <repositories>
     <repository>
-      <id>EclipseSilverpeas</id>
+      <id>NexusSilverpeas</id>
       <layout>default</layout>
       <name>Silverpeas Repository</name>
       <url>http://repository.silverpeas.org/nexus/content/groups/silverpeas</url>
