Tests are now platform independent
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@242 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/test-core/src/main/filters/filters.properties
+++ b/test-core/src/main/filters/filters.properties
@@ -27,3 +27,5 @@ jdbc_driver=org.postgresql.Driver
 jdbc_url=jdbc:postgresql://localhost:5432/SilverpeasV5
 jdbc_login=postgres
 jdbc_password=postgres
+
+jndi_directory=${basedir}/target/jndi
