--- a/lib-core/src/test/filters/filters.properties
+++ b/lib-core/src/test/filters/filters.properties
@@ -20,10 +20,10 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
+
 jdbc_driver=org.postgresql.Driver
 jdbc_url=jdbc:postgresql://localhost:5432/SilverpeasV5
 jdbc_login=postgres
 jdbc_password=postgres
+
+jndi_directory=${basedir}/target/jndi
