Renaming Core into Silverpeas Core
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@247 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
   <artifactId>core</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Core</name>
+  <name>Silverpeas Core</name>
 
   <build>
     <plugins>
