Upgrading to Jackrabbit 1.6.0
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@257 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -10,7 +10,6 @@
 	
   <groupId>com.silverpeas.core</groupId>
   <artifactId>ejb-core</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name> EJB Core</name>
 
@@ -18,7 +17,7 @@
     <dependency>
       <groupId>com.silverpeas.core</groupId>
       <artifactId>lib-core</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
