--- a/ejb-core/favorit/pom.xml
+++ b/ejb-core/favorit/pom.xml
@@ -6,18 +6,16 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>favorit</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>ejb</packaging>
   <name>EJB Favorit</name>
   
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>node</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
