--- a/ejb-core/formtemplate/pom.xml
+++ b/ejb-core/formtemplate/pom.xml
@@ -6,31 +6,29 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>formtemplate</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>EJB FormTemplate</name>
 
   
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>node</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>versioning</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>calendar</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
