--- a/ejb-core/publication/pom.xml
+++ b/ejb-core/publication/pom.xml
@@ -6,42 +6,40 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>publication</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>EJB Publication</name>
 	
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>node</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>tagcloud</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>formtemplate</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>clipboard</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>notation</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
