--- a/ejb-core/readingcontrol/pom.xml
+++ b/ejb-core/readingcontrol/pom.xml
@@ -6,24 +6,22 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>readingcontrol</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>EJB Reading Control</name>
 
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>publication</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>statistic</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
