--- a/ejb-core/versioning/pom.xml
+++ b/ejb-core/versioning/pom.xml
@@ -6,13 +6,11 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>versioning</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>EJB Versioning</name>
 
   <build>
@@ -29,19 +27,19 @@
   
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>node</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core.ejb-core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>personalization</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.silverpeas.core</groupId>
+      <groupId>${project.parent.groupId}</groupId>
       <artifactId>lib-core</artifactId>
       <version>${project.version}</version>
       <classifier>tests</classifier>
