--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -6,20 +6,18 @@
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core</groupId>
   <artifactId>test-core</artifactId>
   <packaging>jar</packaging>
-  <version>${parent.version}</version>
   <name>Test Core</name>
 	
   <dependencies>
     <dependency>
       <groupId>com.silverpeas.core</groupId>
       <artifactId>lib-core</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
