--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -6,19 +6,18 @@
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
+
   <groupId>com.silverpeas.core</groupId>
   <artifactId>war-core</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>Core Webapp</name>
 
   <dependencies>
     <dependency>
-      <groupId>com.silverpeas.core</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>web-core</artifactId>
-      <version>${core.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
