--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 <web-app version="2.4">
   <display-name >Silverpeas</display-name>
   <description>Collaborative portal organizer</description>
-  
+
   <context-param>
     <!-- Init Parameters -->
     <param-name>request_response_factory.minSizeParam</param-name>
@@ -53,7 +53,7 @@
     <param-name>vendorPortletXML.sun.name</param-name>
     <param-value>sun-portlet.xml</param-value>
   </context-param>
-  
+
   <filter>
     <!-- PortletAppEngine Filter -->
     <filter-name>PortletAppEngineFilter</filter-name>
@@ -65,7 +65,7 @@
     <servlet-name>PortletAppEngineServlet</servlet-name>
     <dispatcher>INCLUDE</dispatcher>
   </filter-mapping>
-  
+
   <listener>
     <listener-class>com.sun.portal.container.service.ServiceManagerContextListenerImpl</listener-class>
   </listener>
@@ -75,7 +75,7 @@
   <listener>
     <listener-class>com.stratelia.webactiv.servlets.SilverListener</listener-class>
   </listener>
-  
+
   <servlet>
     <display-name>AuthenticationServlet</display-name>
     <servlet-name>AuthenticationServlet</servlet-name>
@@ -400,18 +400,18 @@
     <servlet-class>com.stratelia.silverpeas.silverStatisticsPeas.servlets.ChartServlet</servlet-class>
   </servlet>
   <servlet>
-		<servlet-name>FormTemplateRequestRouter</servlet-name>
-		<display-name>FormTemplateRequestRouter</display-name>
-		<description>no description</description>
-		<servlet-class>com.silverpeas.formTemplate.servlets.FormTemplateRequestRouter</servlet-class>
-	</servlet>
+    <servlet-name>FormTemplateRequestRouter</servlet-name>
+    <display-name>FormTemplateRequestRouter</display-name>
+    <description>no description</description>
+    <servlet-class>com.silverpeas.formTemplate.servlets.FormTemplateRequestRouter</servlet-class>
+  </servlet>
   <servlet>
     <servlet-name>VersioningDragAndDrop</servlet-name>
     <display-name>VersioningDragAndDrop</display-name>
     <description>no description</description>
     <servlet-class>com.stratelia.silverpeas.versioningPeas.servlets.DragAndDrop</servlet-class>
   </servlet>
-    <servlet>
+  <servlet>
     <servlet-name>FileSharingRequestRouter</servlet-name>
     <display-name>FileSharingRequestRouter</display-name>
     <description>no description</description>
@@ -429,20 +429,21 @@
     <description>no description</description>
     <servlet-class>com.silverpeas.external.filesharing.servlets.GetLinkFileServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>ImportExportRequestRouter</servlet-name>
+    <display-name>ImportExportRequestRouter</display-name>
+    <description>no description</description>
+    <servlet-class>com.silverpeas.importExportPeas.servlets.ImportExportRequestRouter</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>ImportDragAndDrop</servlet-name>
+    <display-name>ImportDragAndDrop</display-name>
+    <description>no description</description>
+    <servlet-class>com.silverpeas.importExportPeas.servlets.ImportDragAndDrop</servlet-class>
+  </servlet>
 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
   <servlet-mapping>
     <servlet-name>AuthenticationServlet</servlet-name>
     <url-pattern>/AuthenticationServlet</url-pattern>
@@ -660,7 +661,7 @@
     <servlet-name>InterestCenterPeasRequestRouter</servlet-name>
     <url-pattern>/RinterestCenterPeas/*</url-pattern>
   </servlet-mapping>
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>NotificationUserRequestRouter</servlet-name>
     <url-pattern>/RnotificationUser/*</url-pattern>
   </servlet-mapping>
@@ -685,10 +686,10 @@
     <url-pattern>/ChartServlet/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-	    <servlet-name>FormTemplateRequestRouter</servlet-name>
-		<url-pattern>/RformTemplate/*</url-pattern>
-	</servlet-mapping>
-    <servlet-mapping>
+    <servlet-name>FormTemplateRequestRouter</servlet-name>
+    <url-pattern>/RformTemplate/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>VersioningDragAndDrop</servlet-name>
     <url-pattern>/VersioningDragAndDrop/*</url-pattern>
   </servlet-mapping>
@@ -704,9 +705,17 @@
     <servlet-name>GetLinkFile</servlet-name>
     <url-pattern>/LinkFile/*</url-pattern>
   </servlet-mapping>
-  
-  
-  
+  <servlet-mapping>
+    <servlet-name>ImportExportRequestRouter</servlet-name>
+    <url-pattern>/RimportExportPeas/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ImportDragAndDrop</servlet-name>
+    <url-pattern>/RImportDragAndDrop/*</url-pattern>
+  </servlet-mapping>
+
+
+
   <jsp-config>
     <taglib>
       <!-- taglib for portlet v1.0 -->
