fixes bug #21 Clipboard icon was missing and has been added
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@314 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/settings/jobManagerPeasIcons.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/settings/jobManagerPeasIcons.properties
@@ -26,6 +26,7 @@ JMP.arrow = /admin/jsp/icons/arrow.gif
 JMP.help = /admin/jsp/icons/icoOutilsAide.gif
 
 JMP.login = /admin/jsp/icons/icoOutilsExit.gif
+JMP.clipboardIcon = /admin/jsp/icons/icoOutilsClipboard.gif
 
 JMP.mailAdmin = /admin/jsp/icons/icoOutilsMail.gif
 
