fixes bug #46 and bug #44
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@317 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
@@ -107,8 +107,8 @@ projectManager_writer = responsable
 projectManager_reader = lecteur
 
 questionReply_admin = admin
-questionReply_publisher = publisher
-questionReply_writer = writer
+questionReply_publisher = writer
+questionReply_writer = publisher
 questionReply_reader = user
 
 quickinfo_admin = admin
@@ -139,7 +139,7 @@ silverCrawler_reader = user
 survey_admin = admin
 survey_publisher = publisher
 survey_writer = publisher
-survey_reader = user
+survey_reader = userClassic
 
 taskm_admin = chefProject
 taskm_publisher = resource
