--- a/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
@@ -21,9 +21,21 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+# Disk location of the XML/Java binding file used by Castor framework
 importExportMapping = importExportMapping.xml
 mappingDir  = file:///C:@MappingImportExportDir@
 #mappingDir = file:///C:/Silverpeas/KMEdition/Production/importExportRepository/
+
+# Log file for import or export of Silverpeas contents
 importExportLogFile = importExport.log
-xsdLocation = http://intranoo.oevo.com/websilverpeas/exchange/v408
-xsdFilename = SilverpeasExchange.xsd
+
+# URI of XML namespace used by import/export
+xsdPublicId = http://intranoo.oevo.com/websilverpeas/exchange/v5
+
+# Default URL pointing to XML Schema specification of XML namespace used by import/export
+xsdDefaultSystemId = http://intranoo.oevo.com/websilverpeas/exchange/v5/SilverpeasExchange.xsd
+
+# URL pointing to XML Schema specification of XML namespace used by import/export
+# This location depends on one parameter which is expected to be the version of the namespace
+xsdSystemId = http://intranoo.oevo.com/websilverpeas/exchange/*/SilverpeasExchange.xsd
