Adding some inegration tests
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@335 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/publication/pom.xml
+++ b/ejb-core/publication/pom.xml
@@ -44,5 +44,24 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.silverpeas.core</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+    <filters>
+      <filter>src/test/filters/filters.properties</filter>
+    </filters>
+  </build>
 </project>
+
