Adding EJB to access admin and authentication
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@346 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -26,6 +26,8 @@
   </dependencies>
   
   <modules>
+    <module>admin</module>
+    <module>authentication</module>
     <module>clipboard</module>
     <module>channels</module>
     <module>personalization</module>
