Using informa that does not depend on JDOM 1.0 but on JDOM 1.1
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@356 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -29,6 +29,7 @@
     <dependency>
       <groupId>informa</groupId>
       <artifactId>informa</artifactId>
+      <classifier>silverpeas</classifier>
     </dependency>
     <dependency>
       <groupId>org.dbunit</groupId>
