fix feature #72 : add "SSO Client"
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@381 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle.properties
@@ -50,6 +50,7 @@ MyInterestCenters = Mes abonnements
 LatestPublications = Les * dernières publications
 QuickInfos = Quick infos
 FileSharing = Mes tickets
+WebConnections = Mes connexions
 
 HelpLaunchIE = Aide au lancement des outils
 HelpLaunchIEPage = HelpLaunchIE_fr.jsp
