--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -74,6 +74,8 @@ todoVisible =
 notificationVisible =
 interestVisible =
 favRequestVisible =
+fileSharingVisible = 
+webconnectionsVisible = true
 
 # URL aide en ligne
 helpURL = /help_fr/Silverpeas.htm
