--- a/ejb-core/questioncontainer/pom.xml
+++ b/ejb-core/questioncontainer/pom.xml
@@ -21,5 +21,11 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>clipboard</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
