Removing dependency to Ant for zipping files
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@393 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/authentication/pom.xml
+++ b/ejb-core/authentication/pom.xml
@@ -13,5 +13,6 @@
   <artifactId>authentication</artifactId>
   <version>${parent.version}</version>
   <packaging>ejb</packaging>
-  <name>EJB Admin</name>
+  <name>EJB Authentication</name>
 </project>
+
