--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -453,6 +453,15 @@
     <description>no description</description>
     <servlet-class>com.silverpeas.external.webConnections.servlets.WebConnectionsRequestRouter</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>AjaxFileUploadServlet</servlet-name>
+    <display-name>AjaxFileUploadServlet</display-name>
+    <servlet-class>com.silverpeas.servlets.upload.AjaxFileUploadServlet</servlet-class>
+    <init-param>
+      <param-name>UPLOAD_DIRECTORY</param-name>
+      <param-value>C:/tmp/ajax</param-value>
+    </init-param>
+  </servlet>
 
 
   <servlet-mapping>
@@ -728,9 +737,13 @@
     <servlet-name>WorkflowDesignerRequestRouter</servlet-name>
     <url-pattern>/RworkflowDesigner/*</url-pattern>
   </servlet-mapping>
-   <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>WebConnectionsRequestRouter</servlet-name>
     <url-pattern>/RwebConnections/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AjaxFileUploadServlet</servlet-name>
+    <url-pattern>/ajaxupload/*</url-pattern>
   </servlet-mapping>
 
 
