--- a/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
@@ -103,4 +103,4 @@ HaveToTestConnections = true
 FallbackUserLogins = false
 
 # To enable profile inheritance between spaces and components
-UseProfileInheritance = false
+UseProfileInheritance = true
