--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
@@ -27,5 +27,36 @@ loginPage =
 // Feuille de style par défaut
 defaultStyleSheet = 
 
+// Feuille de style spécifique au login
+defaultLoginStyleSheet = 
+
 // Les logos (login et topBar)
 logo =
+
+// Id de l'utilisateur anonyme
+anonymousId=
+
+// Activation de l'oubli de mot de passe
+forgottenPwdActive = true
+userResetPasswordPage = /defaultResetPassword.jsp
+
+// Question personnelle (en cas d'oubli de mot de passe)
+userLoginQuestionEnabled=true
+userLoginQuestionPage=/defaultLoginQuestion.jsp
+
+// Si l'utilisateur n'a pas encore rempli sa question personnelle, 
+// on peut le forcer à la remplir
+userLoginQuestionMandatory=true
+userLoginQuestionSelectionPage=/defaultLoginQuestionSelection.jsp
+
+// fonctionnalité associée à la question personnelle :
+// si l'utilisateur remplit sa question personnelle pour la première fois
+// on l'oblige à changer son mot de passe
+userLoginForcePasswordChange=true
+userLoginForcePasswordChangePage=/defaultForcePasswordChange.jsp
+
+// Liste des questions personnelles proposées
+loginQuestion.count=3
+loginQuestion.1=Quelle est le nom de jeune fille de votre mère ?
+loginQuestion.2=Quelle est votre ville de naissance ?
+loginQuestion.3=Quelle est le nom de votre animal préféré ?
