--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle.properties
@@ -31,3 +31,5 @@ EndOfSessionNotificationMsgText=Sans réponse de votre part, le système terminera
 administrator=Administrateur
 passwordExpirationAlert=Expiration de votre mot de passe imminente
 passwordExpirationMessage=Votre mot de passe arrive bientôt à expiration. Veuillez le changer dès que possible.
+badCredentials=Mot de passe incorrect
+invalidAnswer=Réponse incorrecte
