--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -117,6 +117,10 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+     <dependency>
+      <groupId>org.jasig.cas</groupId>
+      <artifactId>cas-client-core</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
