--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -137,6 +137,10 @@
       <artifactId>spring-test</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.castor</groupId>
       <artifactId>castor-jdo</artifactId>
     </dependency>
