closes feature #98 (permalink on documents and versions)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@483 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -151,6 +151,18 @@
     <servlet-class>com.stratelia.webactiv.servlets.GoToFile</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>GoToDocument</servlet-name>
+    <display-name>GoToDocument</display-name>
+    <description>no description</description>
+    <servlet-class>com.stratelia.webactiv.servlets.GoToDocument</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GoToVersion</servlet-name>
+    <display-name>GoToVersion</display-name>
+    <description>no description</description>
+    <servlet-class>com.stratelia.webactiv.servlets.GoToVersion</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>MainRequestRouter</servlet-name>
     <display-name>MainRequestRouter</display-name>
     <servlet-class>com.stratelia.webactiv.servlets.MainRequestRouter</servlet-class>
@@ -526,6 +538,14 @@
   <servlet-mapping>
     <servlet-name>GoToFile</servlet-name>
     <url-pattern>/File/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GoToDocument</servlet-name>
+    <url-pattern>/Document/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GoToVersion</servlet-name>
+    <url-pattern>/Version/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>MainRequestRouter</servlet-name>
