--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -68,7 +68,7 @@ jdbc.displayer = com.silverpeas.form.fieldDisplayer.JdbcFieldDisplayer
 jdbc.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcFieldDisplayer
 jdbc.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
 
-#jdbcRef.implementation = com.silverpeas.form.fieldType.JdbcRefField
-#jdbcRef.displayer = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
-#jdbcRef.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
-#jdbcRef.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+jdbcRef.implementation = com.silverpeas.form.fieldType.JdbcRefField
+jdbcRef.displayer = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
+jdbcRef.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
+jdbcRef.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
