--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -142,6 +142,12 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+	<dependency>
+      <groupId>com.silverpeas.core.ejb-core</groupId>
+	  <artifactId>importExport</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
