--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -48,6 +48,7 @@
     <module>pdc</module>
     <module>mylinks</module>
     <module>questioncontainer</module>
+	<module>importExport</module>
   </modules>
   
 </project>
