Only Silverpeas Administrator can unlock online edited files
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@538 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment.properties
@@ -89,3 +89,13 @@ erreur = Erreur
 
 lier = Lier
 attachment.share = Partager ce fichier
+
+attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
+
+attachment.xmlForm.Edit = Editer les informations complémentaires
+attachment.xmlForm.View = Plus...
+attachment.xmlForm.ToolTip = Informations complémentaires sur 
+attachment.share = Partager ce fichier
+
+attachment.checkOutAndDownload = Réserver et télécharger
+attachment.checkOutAndEditOnline = Editer en ligne
