Correction on version number
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@559 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/authentication/pom.xml
+++ b/ejb-core/authentication/pom.xml
@@ -11,7 +11,7 @@
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>authentication</artifactId>
-  <version>${parent.version}</version>
+  <version>${project.parent.version}</version>
   <packaging>ejb</packaging>
   <name>EJB Authentication</name>
 </project>
