--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -174,7 +174,7 @@ GML.yes						        = Oui
 // Window title
 GML.popupTitle						= ___/ Silverpeas&#153; - Collaborative Portal Organizer \_________________________________________
 
-GML.trademark						= &copy; 2001-2008 Silverpeas - All Rights Reserved
+GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits réservés
 
 // Formulaire
 GML.thefield						= Le champ
