--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/</developerConnection>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
     <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core</url>
   </scm>
 
